crates/math-core/tests/snapshots/error_test__sub_super_then_prime.snap
---
source: crates/math-core/tests/error_test.rs
expression: "f_5^2'"
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:6 ]
   │
 1 │ f_5^2'
   │      ┬  
   │      ╰── duplicate
───╯
